<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentWelcome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".WelcomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btnGetStarted"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:scaleX="1.1"
            android:scaleY="1.1"
            android:layout_gravity="center"
            android:contentDescription="@string/alt_img_welcome"
            android:src="@drawable/welcome" />

        <TextView
            style="@style/tv_title"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/welcome_title" />

        <TextView
            android:id="@+id/tvDescr"
            android:gravity="center"
            style="@style/tv_descr"
            android:layout_marginTop="10dp"
            android:text="@string/welcome_descr" />

    </LinearLayout>

    <Button
        android:id="@+id/btnGetStarted"
        style="@style/btn_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:padding="30dp"
        android:text="@string/text_btn_get_started"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>