<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageViewHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.5"
        android:contentDescription="@string/image_of_home"
        android:padding="15dp"
        android:src="@drawable/home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintBottom_toTopOf="@+id/searchBox"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp">

        <ImageView
            android:id="@+id/img"
            style="@style/iv_favicon"
            android:contentDescription="@string/alt" />

        <TextView
            android:id="@+id/tvTitle"
            style="@style/tv_title"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/tvDescription"
            style="@style/tv_descr"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/tvURL"
            style="@style/tv_url"
            android:layout_marginTop="15dp"
            android:autoLink="web" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/searchBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#192137"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="1dp"
        android:paddingBottom="1dp"
        android:baselineAligned="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/etSearch"
            style="@style/et_search"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autofillHints="Search"
            android:hint="@string/search"
            android:inputType="text"
            android:fontFamily="@font/inter_regular"
            android:padding="15dp"
            android:textColor="#fff"
            android:textColorHint="#9794a2" />

        <ImageButton
            android:id="@+id/btnSearch"
            style="@style/btn_search"
            android:layout_width="58dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/search"
            android:src="@drawable/icon_search" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>